# JobFinder

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  scrapy.cfg
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 20251028_01_initial.py
docs/: architecture.md  data_contracts.md  data_model.md  known_issues.md  naming_conventions.md  observability.md  quality_gates.md  review_checklist.md  roadmap.md  runbook.md  task.md
docs/adr/: 0001-db-postgresql.md  0002-orm-sqlachemy.md  0003-migrations-alembic.md  0004-scraping-framework.md  0005-orquestracao.md
docs/db/: deduplication.md  indexing_strategy.md  migrations_guidelines.md
docs/scrapers/: _template.md  greenhouse.md  registry.md  remoteco.md  remoteok.md  restritos.md  weworkremotely.md  workable.md
docs/scraping/: policy.md
scripts/: backup_db.sh  restore_db.sh
src/job_finder/: settings.py
src/job_finder/api/: main.py
src/job_finder/dags/: greenhouse_daily.py  remoteco_daily.py  remoteok_daily.py  weworkremotely_daily.py  workable_daily.py
src/job_finder/db/: session.py
src/job_finder/db/models/: base.py  company.py  job.py  job_benefit.py  job_skill.py  scraping_log.py  skill.py
src/job_finder/obs/: metrics.py
src/job_finder/scraping/: middlewares.py  schemas.py  settings.py
src/job_finder/scraping/middlewares/: ban_detection.py  policy.py  proxy_rotation.py  user_agent.py
src/job_finder/scraping/pipelines/: __init__.py  db_pipeline.py  dedupe_pipeline.py
src/job_finder/scraping/spiders/: greenhouse.py  remoteco.py  remoteok.py  weworkremotely.py  workable.py
src/job_finder/scripts/: seed.py
tests/: conftest.py  factories.py  test_dedupe_pipeline.py  test_models_basic.py
